// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatDisplay - bash_tool tool call snapshot altMode (running → done) > snapshot: done state (result appended) 1`] = `
"❯ [you]
  Run the test suite

⚙ Run npm test at /project
  │  All tests passed
  │  5 tests, 0 failures
  └─ Executed (exit 0)

"
`;

exports[`ChatDisplay - bash_tool tool call snapshot altMode (running → done) > snapshot: running state (no result yet) 1`] = `
"❯ [you]
  Run the test suite

⚙ Run npm test at /project
  └─ Running ...
"
`;
